[metadata]
name = econcycle
version = file: src/econcycle/VERSION
author = Sukkwon On
author_email = skwon2345@gmail.com
description = Get Calculated Economic Cycle
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/skwon2345/market-cycle
project_urls =
    Bug Tracker = https://github.com/skwon2345/market-cycle/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

install_requires =
    finnhub-python==2.4.15

[options.packages.find]
where = src